--- a/TestGenerator.csproj
+++ b/TestGenerator.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="Acr.UserDialogs" Version="9.2.2" />
     <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.14.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.7" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.7" />
     <PackageReference Include="Microsoft.Graph" Version="5.86.0" />
     <PackageReference Include="OpenAI" Version="2.2.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.41" />
