--- a/Settings.json
+++ b/Settings.json
@@ -1,5 +1,6 @@
 {
   "ApiKey": "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",
   "DefaultPath": "",
+  "projectName": "Tests",
   "CoveregeThreashHold": "70"
 }
