plzzzzzz deeeeep seeeeeeeeek plzzzzzzzzzzzzz

--- a/Settings.json
+++ b/Settings.json
@@ -1,6 +1,6 @@
 {
   "ApiKey": "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",
   "DefaultPath": "C:/Users/mylaptop.ge/source/repos/DI/DI",
-  "projectName": "Tests",
+  "projectName": "newname",
   "CoveregeThreashHold": "70"
 }
